class Permission {
  constructor(title) {
    this.title = title
  }
}

module.exports = Permission