class Role {
  constructor(name, permissions) {
    this.name = name
    this.permissions = permissions
  }
}

module.exports = Role