class StaticPage {
  constructor(name, title, content) {
    this.name = name
    this.title = title
    this.content = content
  }
}

module.exports = StaticPage