@startuml APP

class User <<Entity>> {
  + name: String
  + surname: String
  + email: String
  + phone: String
  + department: String
  + title: String
  + role: Role
  - identificationNumber: String
  - institutionalNumber: String
  + documents: Document[]
  + getPersonalStatistics(User): Statistics
  + upload(File): Document
}

class Login {
  + login(): User
  - controlUserRecord(User): Boolean
  - add(User): User
}

class Translator {
  + addAsManually(User): User
  + removeManuallyAdded(User): User
  + uploadCorrectedFile(id, File): Document
}

class Admin {
  + delete(User): User
  + changeRole(User): User
  + edit(StaticPage): StaticPage
  + add(Permission): Permission
  + delete(Permission): Permission
  + updatePermmission(Permission): Permission
  + updateRole(Role): Role
  + getStatistics(): Statistics
}

class Statistics <<ValueObject>> {
  + totalDocument : Number
  + completedDocument : Number
  + waitingDocument : Number
  + examiningDocument : Number
  + rejectedDocument : Number
}

class Performans <<ValueObject>> {
  + acceptedDocument : Number
  + rejectedDocument : Number
  + completedDocument : Number
  + examiningDocument : Number
}

class StaticPage <<Entity>> {
  + name : String
  + title : String
  + content : String
}

class Document <<Entity>> {
  + name: String
  + url: String
  + correctedFile: Document
  + state: State
  + uploader: User
}

class Role <<Entity>> {
  + name: String
  + permissions: Permission[]
}

class Permission <<Entity>> {
  + title: String
}

enum State {
  WAITING
  EXAMINING
  REJECTED
  READY_FOR_DOWNLOAD
}


Translator -up-|> User
Admin -up-|> User
User "1" *-- "0..n" Document : has >
User "1" *-up- "1" Document : has >
Document "1" --> "1" State : has a >
Document "1" *-- "1" Document : has a >
Role "1" *-- "1" User : has a <
Role "1..n" o-- "1..n" Permission : has >
User "1" *-up- "1" Statistics : has >
Translator "1" *-- "1" Performans : has >


@enduml
